Add observer pattern 1. Patient subject to add, remove and notify observers 2. VitalSignMonitor model to checkVitals for a patient and send notification to observers